@@ -5,10 +5,12 @@ systemd System and Service Manager
  * core:
  	- remove initramfs support;
  * libsystemd:
+ 	• struct sd_bus:
+ 		- remove “machine” field;
+ 		- remove “kernel” field;
  	- remove “bus_message_map_properties_changed” function;
  	- remove “BusTransport” enum;
  	- remove “sd_bus_open_system_container” function;
- 	- remove “machine” field from sd_bus struct;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
